# Badge-2025

./: CONTRIBUTORS.md  README.md  flag.txt
KiCAD/DC33/: DC33.kicad_dru  DC33.kicad_pro  DC33.kicad_sch  DC33_analog.kicad_sch  Library.kicad_sym  can.kicad_sch  can_injector.kicad_sch  can_protection.kicad_sch  can_termination.kicad_sch  can_trx.kicad_sch  disconnect.kicad_sch  display.kicad_sch  display_sd.kicad_sch  fields2.xlsx  gpio_buttons.kicad_sch  mcu_ui.kicad_sch  neopixel.kicad_sch  nmea_modbus.kicad_sch  power.kicad_sch  voltage_refs.kicad_sch
KiCAD/DC33/3D/: 1SMB5918BT3G.stp  ADG849YKSZ-REEL.stp  CL-SB-22C-02.stp  EXB-38V220JV.stp  FDN359BN.stp  ISL21010CFH315Z-T7A.stp  JS5208.stp  (+17 more)
firmware/: firmware_map.drawio
firmware/defmt-wrap/: Cargo.toml  README.md
firmware/embedded-graphics-transform/: Cargo.toml
firmware/embedded-term/: Cargo.toml
firmware/firmware/: Cargo.toml  LICENSE-MIT  README.md  build.rs  file.txt  flash.sh  serial.sh
firmware/firmware/src/: .rustc_info.json  main.rs
firmware/firmware/src/apps/: console.rs  diff_recv.rs  display.rs  logging.rs  mod.rs  neopixel.rs  rhai_repl.rs  scrolling_console.rs  usb_cli.rs  wifi_tcp_cli.rs
firmware/firmware/src/apps/rx/: can.rs  mod.rs  nmea0183.rs
firmware/firmware/src/apps/tx/: can_pio.rs  inject.rs  mod.rs
firmware/firmware/src/platform/: async_io_on_sync_io.rs  cropped_wrapped_converted_draw_target.rs  cropped_wrapped_draw_target.rs  flushing_display.rs  irqs.rs  locking_spi_bus.rs  mod.rs  multi_write.rs  neopixel.rs  net_stack.rs  picotool.rs  psram.rs  set_frequency.rs  set_frequency_spi.rs  shared_spi_bus.rs  spi_device_async_cs.rs  sync_write_on_async.rs  usb.rs  usb_cdc_io.rs  util.rs  vertical_scrolling.rs  wifi.rs
firmware/firmware/src/platform/bq25895/: control.rs  mod.rs  runner.rs  value.rs
firmware/firmware/src/platform/bq25895/registers/: mod.rs  reg00.rs  reg01.rs  reg02.rs  reg03.rs  reg04.rs  reg05.rs  reg06.rs  reg07.rs  reg08.rs  reg09.rs  reg0a.rs  reg0b.rs  reg0c.rs  reg0d.rs  reg0e.rs  reg0f.rs  reg10.rs  reg11.rs  reg12.rs  reg13.rs  reg14.rs
firmware/firmware/src/platform/i2c_io_expander/: inner_pin.rs  mod.rs  model.rs  pin.rs  pin_state.rs
firmware/firmware/src/platform/i2c_io_expander/models/: mod.rs  pca9536.rs  tcal9539.rs
firmware/firmware/src/platform/interrupt_i2c/: mod.rs  update_state.rs
firmware/firmware/src/platform/mc3479/: control.rs  data.rs  mod.rs  registers.rs  runner.rs
firmware/firmware/src/platform/mcp2518/: mod.rs
firmware/firmware/src/platform/mcp2518/registers/: mod.rs
firmware/firmware/src/platform/mcp2518/registers/cpu_ctrl/: crc.rs  devid.rs  ecccon.rs  eccstat.rs  iocon.rs  mod.rs  osc.rs
firmware/firmware/src/platform/msc/: class.rs  mod.rs  storage.rs
firmware/firmware/src/platform/msc/scsi/: command_block_wrapper.rs  command_status_wrapper.rs  mod.rs
firmware/firmware/src/platform/msc/scsi/cmd/: inquiry.rs  mod.rs  mode_sense6.rs  prevent_allow_medium_removal.rs  read10.rs  read_capacity.rs  request_sense.rs  scsi_command_in.rs  scsi_response_out.rs  test_unit_ready.rs  write10.rs
firmware/firmware/src/platform/repl/: accel.rs  batt.rs  can.rs  common.rs  console.rs  display.rs  input.rs  led.rs  mod.rs  nmea2000.rs  rpc.rs  rx.rs  sao.rs  sys.rs  trx.rs  tx.rs
firmware/firmware/src/platform/sdcard/: bus.rs
firmware/firmware/src/platform/sdmmc/: card_type.rs  command.rs  mod.rs  registers.rs  spi.rs
firmware/firmware/src/tasks/: batt.rs  ctrl.rs  irq.rs  log.rs  mod.rs  repl.rs  rx.rs  tx.rs  wifi.rs
software/: CAN_decode.dot  lint.sh  render_dot.sh
software/dazzle/: LICENSE  dazzle.py  lanyard.py  pyproject.toml  requirements.txt
(+50 files in other folders)
